--- a/clients.html
+++ b/clients.html
@@ -28,7 +28,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/clients" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
@@ -89,10 +89,29 @@
 
                 <p>Throughout my freelancing career, I've helped clients from a wide range of industries achieve their goal of improving their online presence. Here is a selection of my most recent projects and the services that were provided.</p>
                 <div class="portfolio">
+                    <div id="jenup" class="shadow-box-2">
+                        <div class="row-2">
+                            <div class="col-5">
+                                <img src="https://sybiltec.com/images/clients/jenup.jpg" alt="JenUp">
+                            </div>
+                            <div class="col-7">
+                                <h2>JenUp</h2>
+                                <h3 style="font-size: 18px;">Support for eating disorders and body image</h3>
+                                <ul>
+                                    <li>Website design improvements</li>
+                                </ul>
+                                <div class="padding-btn">
+                                    <a class ="btn-secondary" href="https://jenup.co.uk/" 
+                                    target="_blank" rel="noopener noreferrer">View Client</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 <div id="emrys-consulting" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Emrys-Consulting.jpg" alt="Emrys Consulting">
+                            <img src="https://sybiltec.com/images/clients/Emrys-Consulting-3.jpg" alt="Emrys Consulting">
                         </div>
                         <div class="col-7">
                             <h2>Emrys Consulting</h2>
@@ -111,7 +130,7 @@
                 <div id="encalife" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/encalife.JPG" alt="encalife">
+                            <img src="https://sybiltec.com/images/clients/encalife-2.jpg" alt="encalife">
                         </div>
                         <div class="col-7">
                             <h2>encalife</h2>
@@ -130,7 +149,7 @@
                 <div id="pendle-witch-company" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/The-Pendle-Witch-Company.jpg" alt="The Pendle Witch Company">
+                            <img src="https://sybiltec.com/images/clients/The-Pendle-Witch-Company-2.jpg" alt="The Pendle Witch Company">
                         </div>
                         <div class="col-7">
                             <h2>The Pendle Witch Company</h2>
@@ -151,7 +170,7 @@
                 <div id="ld-tiling-contractors" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/LD-Tiling-Contractors.jpg" alt="LD Tiling Contractors">
+                            <img src="https://sybiltec.com/images/clients/LD-Tiling-Contractors-2.jpg" alt="LD Tiling Contractors">
                         </div>
                         <div class="col-7">
                             <h2>LD Tiling Contractors</h2>
@@ -170,7 +189,7 @@
                 <div id="nerowireart" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/nerowireart.jpg" alt="NeroWireArt">
+                            <img src="https://sybiltec.com/images/clients/NeroWireArt-2.jpg" alt="NeroWireArt">
                         </div>
                         <div class="col-7">
                             <h2>NeroWireArt</h2>
@@ -192,7 +211,7 @@
                 <div id="tizane" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Tizane.jpg" alt="Tizane">
+                            <img src="https://sybiltec.com/images/clients/Tizane-2.jpg" alt="Tizane">
                         </div>
                         <div class="col-7">
                             <h2>Tizane</h2>
@@ -215,7 +234,7 @@
                 <div id="together-matters" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Together-Matters.jpg" alt="Together Matters">
+                            <img src="https://sybiltec.com/images/clients/Together-Matters-2.jpg" alt="Together Matters">
                         </div>
                         <div class="col-7">
                             <h2>Together Matters</h2>
@@ -235,7 +254,7 @@
                 <div id="crazy-thumbs" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/crazy-thumbs.jpg" alt="Crazy Thumbs">
+                            <img src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
                         </div>
                         <div class="col-7">
                             <h2>Crazy Thumbs</h2>
@@ -259,7 +278,7 @@
                 <div id="bamboo-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">                         
+                            <img src="https://sybiltec.com/images/clients/The-Bamboo-Wardrobe-2.jpg" alt="The Bamboo Wardrobe">                         
                         </div>
                         <div class="col-7">
                             <h2>The Bamboo Wardrobe</h2>
@@ -282,7 +301,7 @@
                 <div id="meitam-london" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/meitam-london.jpg" alt="Meitam London">
+                            <img src="https://sybiltec.com/images/clients/meitam-london-2.jpg" alt="Meitam London">
                         </div>
                         <div class="col-7">
                             <h2>Meitam London</h2>
@@ -321,7 +340,7 @@
                 <div id="global-banking-school" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Global-Banking-School.jpg" alt="Global Banking School">
+                            <img src="https://sybiltec.com/images/clients/Global-Banking-School-2.jpg" alt="Global Banking School">
                         </div>
                         <div class="col-7">
                             <h2>Global Banking School</h2>
@@ -340,7 +359,7 @@
                 <div id="happily-clappily-ever-laughter" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Happily-Clappily-Ever-Laughter.JPG" alt="Happily Clappily Ever Laughter">
+                            <img src="https://sybiltec.com/images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter">
                         </div>
                         <div class="col-7">
                             <h2>Happily Clappily Ever Laughter</h2>
@@ -354,10 +373,10 @@
                     </div>
                 </div>
 
-                <div id="x-blu" class="shadow-box-2">
+                <!-- <div id="x-blu" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="/images/clients/x-blu.JPG" alt="x-blu">
+                            <img src="https://sybiltec.com/images/clients/x-blu.JPG" alt="x-blu">
                         </div>
                         <div class="col-7">
                             <h2>x-blu</h2>
@@ -374,12 +393,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div id="events-meets-world" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/events-meets-world.jpg" alt="Events Meets World">
+                            <img src="https://sybiltec.com/images/clients/events-meets-world-2.jpg" alt="Events Meets World">
                         </div>
                         <div class="col-7">
                             <h2>Events Meets World</h2>
@@ -402,7 +421,7 @@
                 <div id="pathways-21" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Pathways-21.jpg" alt="Pathways 21">
+                            <img src="https://sybiltec.com/images/clients/Pathways-21-2.jpg" alt="Pathways 21">
                         </div>
                         <div class="col-7">
                             <h2>Pathways 21</h2>
@@ -423,7 +442,7 @@
                 <div id="cnt-associates" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/CNT-Associates.jpg" alt="CNT Associates">                         
+                            <img src="https://sybiltec.com/images/clients/CNT-Associates-2.jpg" alt="CNT Associates">                         
                         </div>
                         <div class="col-7">
                             <h2>CNT Associates</h2>
@@ -447,7 +466,7 @@
                 <div id="find-the-balance" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/find-the-balance.jpg" alt="Find the Balance">                         
+                            <img src="https://sybiltec.com/images/clients/find-the-balance-2.jpg" alt="Find the Balance">                         
                         </div>
                         <div class="col-7">
                             <h2>Find the Balance</h2>
@@ -467,7 +486,7 @@
                 <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/Audrey-Zeitoun-Coaching.jpg" alt="Audrey Zeitoun Coaching">                         
+                            <img src="https://sybiltec.com/images/clients/Audrey-Zeitoun-Coaching-2.jpg" alt="Audrey Zeitoun Coaching">                         
                         </div>
                         <div class="col-7">
                             <h2>Audrey Zeitoun Coaching</h2>
@@ -485,7 +504,7 @@
                     </div>
                 </div>
 
-                <div id="blue-horizon-lnw" class="shadow-box-2">                         
+                <!-- <div id="blue-horizon-lnw" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
                             <img src="https://sybiltec.com/images/clients/Blue-Horizon-LNW.jpg" alt="Blue Horizon LNW">                         
@@ -505,12 +524,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre.jpg" alt="New Haw Community Centre">                         
+                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-2.jpg" alt="New Haw Community Centre">                         
                         </div>
                         <div class="col-7">
                             <h2>New Haw Community Centre</h2>
@@ -532,7 +551,7 @@
                 <div id="esme-learning-solutions" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/Esme-Learning-Solutions.jpg" alt="Esme Learning Solutions">                         
+                            <img src="https://sybiltec.com/images/clients/Esme-Learning-Solutions-2.jpg" alt="Esme Learning Solutions">                         
                         </div>
                         <div class="col-7">
                             <h2>Esme Learning Solutions</h2>
@@ -546,10 +565,6 @@
                                 <li>Landing page creation in Shogun</li>
                                 <li>Course registration form</li>
                             </ul>      
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://esmelearning.com"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -557,7 +572,7 @@
                 <div id="future-communities-uk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/Future-Communities-UK.jpg" alt="Future Communities UK">                         
+                            <img src="https://sybiltec.com/images/clients/Future-Communities-UK-2.jpg" alt="Future Communities UK">                         
                         </div>
                         <div class="col-7">
                             <h2>Future Communities UK</h2>
@@ -581,7 +596,7 @@
                 <div id="wardells-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/wardells-wardrobe.jpg" alt="Wardell's Wardrobe">                         
+                            <img src="https://sybiltec.com/images/clients/wardells-wardrobe-2.jpg" alt="Wardell's Wardrobe">                         
                         </div>
                         <div class="col-7">
                             <h2>Wardell's Wardrobe</h2>
@@ -603,7 +618,7 @@
                 <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/The-GDPR-Compliance-Consultancy.jpg" alt="The GDPR Compliance Consultancy">                         
+                            <img src="https://sybiltec.com/images/clients/The-GDPR-Compliance-Consultancy-2.jpg" alt="The GDPR Compliance Consultancy">                         
                         </div>
                         <div class="col-7">
                             <h2>The GDPR Compliance Consultancy</h2>
@@ -624,7 +639,7 @@
                 <div id="swipsearch" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/SwipSearch.jpg" alt="SwipSearch">                         
+                            <img src="https://sybiltec.com/images/clients/SwipSearch-2.jpg" alt="SwipSearch">                         
                         </div>
                         <div class="col-7">
                             <h2>SwipSearch</h2>
@@ -663,7 +678,7 @@
                 <div id="focus-on-learning" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/focus-on-learning.jpg" alt="Focus on Learning">                         
+                            <img src="https://sybiltec.com/images/clients/focus-on-learning-2.jpg" alt="Focus on Learning">                         
                         </div>
                         <div class="col-7">
                             <h2>Focus on Learning</h2>
