--- a/services.html
+++ b/services.html
@@ -88,10 +88,10 @@
                 <p class="container-1140 padding-top padding-bottom">Please read on to find out about the 
                     services I offer and how they can boost your business.</p>
 
-                <h3>Free Website Review</h3>
+                <h3>Website Review</h3>
                 <hr class="left-align">
                 <h4>Start With an Audit of Your Site</h4>
-                <p>If you know your website needs improvements but you don't know where to begin, start with a free website review. This is a short analysis of your website which identifies issues within a range of areas, including but not limited to:</p>
+                <p>If you know your website needs improvements but you don't know where to begin, start with a website review. This is a short analysis of your website which identifies issues within a range of areas, including but not limited to:</p>
                 <ul>
                     <li>User-friendliness</li>
                     <li>Design</li>
@@ -154,21 +154,22 @@
                 <hr class="left-align">
                 <p>I am available to facilitate your workshop or webinar. Here are some examples of events I've run previously.</p>
                 <h4>Workshops</h4>
-                <p>In March 2022, as part of Start-Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. Please see the details of the workshop <a href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">here</a>.</p>
+                <p>In March 2022, as part of Start Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. Please see the details of the workshop <a href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">here</a>.</p>
 
                 <div class="center"><img src="https://sybiltec.com/images/start-up-bromley-business-week.png" style="width:100%; max-width:560px;" alt="Start Up Bromley Business Week. Workshops and events running Monday 14th March - Saturday 19th March"></div>
+
+                <p>In March 2023, as part of Start Up Business Week 2023, I participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website. Please see the details of the workshop <a href="https://www.eventbrite.com/e/conquering-social-media-day-tickets-539198997717" target="_blank" rel="noopener noreferrer">here</a>.</p>
+
+                <div class="center"><img src="https://sybiltec.com/images/social-media.jpg" style="width:100%; max-width:560px;" alt="Social media laptop on desk"></div>
 
                 <h4>Webinars</h4>
                 <p>I am a regular guest speaker on webinars hosted by <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a>, where I present on various topics ranging from the basics of getting your business online, to setting up an e-commerce store with Shopify.</p>
 
-                <div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/ZnT3T_-rjCc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <p>Watch the video below of a webinar which was delivered in association with the British Library.</p>
 
-                <p class="center">Setting Up an Online Store for Your Business Using Shopify<br>(16 May 2022)</p>
+                <div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/6cd6ErRLOFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
-                </div>
-
-                <div class="center padding-bottom padding-top">
-                    <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>   
+                <p class="center">Building an Online Store Using Shopify<br>(4 April 2023)</p>
                 </div>
             </div>
         </div>
