Add blog on web design process

--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,6 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com/blog" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
@@ -84,6 +83,9 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <h2>The Web Design Process Explained in 12 Easy Steps</h2>
+                <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
+                <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read More >></a>
                 <h2>A Guide to Updating Your WordPress Website</h2>
                 <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
                 <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">Read More >></a>
