--- a/index.html
+++ b/index.html
@@ -141,18 +141,25 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-4">
                         <div class="offer-card center">
                             <i class="fas fa-tools"></i>
                         <h3>Website Maintenance</h3>
                         <p>As a business owner, you're most likely a very busy person with little time to spare! I will be your long-term partner to manage the ongoing maintenance of your website.</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-4">
                         <div class="offer-card center">
                             <i class="fa-solid fa-graduation-cap"></i>
                         <h3>Training</h3>
-                        <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from setting up a Shopify store to cyber security issues.</p>
+                        <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from setting up a Shopify store to getting your business online.</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-regular fa-file-image"></i>
+                        <h3>Leaflet Design</h3>
+                        <p>Do you have an upcoming event that you'd like to promote? I can design a leaflet, poster or social media graphic to showcase your event.</p>
                         </div>
                     </div>
                 </div>
@@ -315,6 +322,19 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps"><img src="images/ux-work-womans-hands-drawing-wireframe-350x183.jpg" 
+                                alt="UX work: woman's hands drawing a wireframe"></a>     
+                            <div class="blog-card-text">           
+                                <h3>The Web Design Process Explained in 12 Easy Steps</h3>
+                                <p>If you're wondering what the web design process is like, I've outlined the steps in this blog to help you understand what is involved.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
                     <div class="col-4">          
                         <div class="blog-card">  
                             <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website"><img src="images/update-software-app-350x183.jpg" 
@@ -341,19 +361,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="images/person-holding-black-iphone-5-350x183.jpg" 
-                                alt="Person holding black iPhone 5"></a>     
-                            <div class="blog-card-text">           
-                                <h3>Cyber Security Best Practices for You and Your Business</h3>
-                                <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div> 
                     </div>
                 </div>
             </div>
