--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
         </script>
         <!-- End MailerLite Universal -->    
         <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-
-        <link rel="stylesheet" type="text/css" href="./style.css" />
         <script type="module" src="./index.js"></script> 
         <style>
             /* 
@@ -101,9 +99,8 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <p>Taking your online business further...</p>
-                        <h2 style="color: #ffffff; font-size: 60px">Sybiltec</h2>
-                        <h1 class="padding-bottom" style="font-size: 18px;">A freelancer providing web design and development services to small businesses based in Kent and London.</h1>
+                        <h1 style="">Web design and development services</h1>
+                        <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting small businesses in South East London</h2>
                         <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
                     </div>
                     <div class="col-4">
@@ -219,14 +216,14 @@
                     <div class="col-6">
                         <i class="fa-regular fa-circle-check"></i><h3>Attention to Detail</h3>
                         <p>I'll scrutinise every detail to make sure everything is just right. You will be presented with a pixel-perfect design.</p>
-                        <i class="fa-regular fa-circle-check"></i><h3>Affordable Prices</h3>
-                        <p>Unlike agencies, my services won't cost you a small fortune. Rest assured that you are getting quality service and value for money.</p>
+                        <i class="fa-regular fa-circle-check"></i><h3>Personalised Services</h3>
+                        <p>Unlike working with an angency, you'll be working directly with myself, providing you with a truly personalised customer service.</p>
                     </div>
                     <div class="col-6">
                         <i class="fa-regular fa-circle-check"></i><h3>A Range of Experiences</h3>
                         <p>I've developed a wide variety of skills through diverse work experiences, ranging from music production to managing a start-up.</p>
-                        <i class="fa-regular fa-circle-check"></i><h3>Worked With Over 25 Small Businesses</h3>
-                        <p>Over the last 3 years, I've helped several SMEs from within a wide range of industry sectors to improve their online presence.</p>
+                        <i class="fa-regular fa-circle-check"></i><h3>Demonstrable Track Record</h3>
+                        <p>Over the last 3 years, I've helped over 25 small businesses from within a wide range of industry sectors to improve their online presence.</p>
                     </div>
                 </div>
             </div>
@@ -369,32 +366,7 @@
             </div>
         </div>
         </div>
-        <div class="certifications section">
-            <div class="container-1140">
-                <h2>Certifications</h2>
-                <hr>
-                <div class="row">
-                    <div class="col-4">
-                        <h4>Google Digital Garage Certified</h4>
-                            <img src="https://sybiltec.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
-                                alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
-                    </div>
-                    <div class="col-4">
-                    <h4>Yoast Academy Certified</h4>
-                    <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
-                        target="_blank" rel="noopener noreferrer">
-                        <img src="https://sybiltec.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
-                            alt="Yoast for Beginners certificate"></a>
-                    </div>
-                    <div class="col-4">
-                        <h4>The Complete 2022 Software Testing Bootcamp</h4>
-                            <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
-                                alt="Udemy The Complete 2022 Software Testing Bootcamp">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="partners section center">
+        <div class="partners section center grey">
             <div class="container-1140">
                 <h2>Partners</h2>
                 <hr>
@@ -416,6 +388,31 @@
                     </div>
                     <div class="col-2">
                             <img src="images/logos/Business-&-IP-Centre-London.jpg" alt="Business & IP Centre London">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="certifications section">
+            <div class="container-1140">
+                <h2>Certifications</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-4">
+                        <h4>Google Digital Garage Certified</h4>
+                            <img src="https://sybiltec.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                                alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
+                    </div>
+                    <div class="col-4">
+                    <h4>Yoast Academy Certified</h4>
+                    <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="https://sybiltec.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
+                            alt="Yoast for Beginners certificate"></a>
+                    </div>
+                    <div class="col-4">
+                        <h4>The Complete 2022 Software Testing Bootcamp</h4>
+                            <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
+                                alt="Udemy The Complete 2022 Software Testing Bootcamp">
                     </div>
                 </div>
             </div>
@@ -555,5 +552,7 @@
         <!-- prettier-ignore -->
         <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
             ({key: "AIzaSyD95PpQ6g_TnP-jsRteWuqqg-VXXyktOGo", v: "weekly"});</script>
+
+        <div class="tr-widget" data-id="4604" data-view="badge_inner" data-lang=""><a href="https://trust.reviews/" class="trcr" target="_blank">Powered by <span>Trust.Reviews</span></a></div><script type="text/javascript" src="https://cdn.trust.reviews/widget/embed.min.js" defer></script>
 </body>
 </html>
